# cafe

./: .gitignore  .gitmodules  .gitmodules~  CMakeLists.txt  Cargo.toml  DEADJOE  LICENSE  Makefile  Makefile1  README.md  a.out  boot.cfg  build.sh  cafe.c  cafe.h  compile_commands.json  config.mak  game.cafe  impl.c  index.html  index.js  init.lua  linux_build.sh  log.txt  main.c  main.lua  osx_build.sh  tags  teste.c
.clangd/index/: cafe.c.C2A5D9BCA854873E.idx  cafe.h.4CA053C23F42B2A5.idx  coffee.h.4645BE52009E58A5.idx  main.c.805DA29B27A33146.idx  mocha.h.DEE503840044F61B.idx  tea.h.5FF95AD8273C6152.idx
assets/: pack.tar
cross/: Makefile.FreeBSD  Makefile.Linux  Makefile.MinGW  Makefile.OSX  Makefile.Web  Makefile.Windows  emscripten.makefile  linux.makefile  mingw.makefile
example/: main.lua
example/lib/: animator.lua  class.lua
example/objects/: enemy.lua  lizard.lua  object.lua  player.lua
examples/: audio.rs  canvas.rs  cube.rs  game.tar  hello.rs  image.rs  init.lua  main.lua  static.rs
examples/game/: init.lua  main.lua
examples/game/objects/: animation.lua  player.lua  rabbit.lua
examples/lua/: init.lua  main.lua  player.lua
include/: cafe.h  cstar.h
langs/: lua_cafe.h  wren_cafe.h
lua/: cafe.c  cafe.h
menu/coffee/: .gitignore  LICENSE  Makefile1  README.md  config.mak  lib.coffee  main.c  main.coffee
menu/coffee/include/: coffee.h
menu/coffee/src/: coffee.c
menu/latte/: .gitignore  README.md  config.mak  main.c  teste.tar
menu/latte/include/: latte.h
menu/latte/src/: latte.c
menu/mocha/: .gitignore  Makefile  README.md  mocha.c  mocha.h
menu/mocha/examples/hello/: main.c
menu/tea/: .gitignore  Makefile  README.md  tea.c  tea.h
menu/tea/examples/hello/: main.c
modules/tea/: .gitignore  Makefile  README.md  main.c  main.c.old  tags
modules/tea/src/: tea.c  tea.c~  tea.h
src/: audio.rs  cafe.c  cafe.c~  cafe.h  cafe.h~  joystick.rs  keyboard.rs  lib.rs  mouse.rs  render.rs
src/lua/: audio.c  cafe_lua.h  filesystem.c  graphics.c  init.c  input.c  timer.c  types.c
src/render/: render2D.rs  render3D.rs
