[lib]
name = "cafe"
path = "src/lib.rs"

[package]
name = "cafe_core"
categories = ["rendering", "opengl", "sdl2", "game-frameworks"]
description = "Game frameworks made on top of SDL2 and OpenGL"
keywords = ["SDL", "rendering", "engine", "framework", "graphics"]
authors = ["Canoi Gomes <canoiaguiar@gmail.com>"]
repository = "https://codeberg.org/cafe/cafe"
version = "0.1.2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tea_render = { version = "0.1.0" }
mocha_audio = { version = "0.1.1" }
latte_fs = { version = "0.0.0" }
coffee_lang = { version = "0.0.0" }
stb_image = "0.2.5"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
